2021-05-20  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-bonus-configuration): Suppress display of
	\*Async Shell Command* buffers.
	(diredc--advice--dired-run-shell-command): Use function
	start-process-shell-command instead of shell-command.
	(diredc-browse--create-keymap): keybinding for diredc-exit
	while in browse buffer.
	(diredc--match-command): New defsubst.
	(diredc--advice--shell-guess-fallback)
	(diredc--advice--dired-read-shell-command)
	(diredc-do-async-shell-command): Minor code improvements

2021-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-mode): Improve exit handling.
	(diredc--find-another-diredc-buffer): New helper function.
	(diredc--window-state-change-hook-function, diredc-swap-windows)
	(diredc-hist-find-alternate-file, diredc): Replace function
	window-normalize-frame with window-frame.
	(diredc-swap-windows): Ensure variable
	switch-to-buffer-preserve-window-point nil.

2021-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hl-current-buffer): New face for hl-line-mode
	only for current-buffer.
	(diredc--hl-cookie): New variable to track remapped face hl-line.
	(diredc--window-state-change-hook-function): Apply and remove new
	face, as required.
	(diredc-mode): Apply and remove the hook function.

2021-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-swap-windows): New feature.
	(diredc--create-keymap, diredc-browse--create-keymap): Bind it.
	(diredc--swap-browse-buffer): Support for new feature.
	(diredc--window-state-change-hook-function):

2021-04-27  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--dired-run-shell-command): Divide up
	multiple commands for proper comint-send-input.
	(diredc--advice--dired-read-shell-command)
	(diredc-do-async-shell-command)
	(diredc--advice--shell-guess-fallback): Improve regex for
	executable-find.

2021-04-27  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--shell-guess-fallback): Handle all